--- a/sample_project/android/app/src/main/AndroidManifest.xml
+++ b/sample_project/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="sample_project"
+        android:label="Missouri S&amp;T ACM-W To-Do List"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
